# llvm-c-extras

./: CMakeLists.txt  compile_flags.txt
include/llvm-c/Extras/: Core.h
src/: CMakeLists.txt  llvm-core-extras.cc
